--- a/gradle.properties
+++ b/gradle.properties
@@ -12,12 +12,12 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Aug 02 13:55:39 CST 2017
+#Wed Dec 27 14:05:08 CST 2017
 systemProp.http.proxyPort=3128
 systemProp.http.proxyUser=luocj0613
-systemProp.http.proxyPassword=LUOcj-888
+systemProp.http.proxyPassword=Luocj-888
 org.gradle.jvmargs=-Xmx1536m
-systemProp.https.proxyPassword=LUOcj-888
+systemProp.https.proxyPassword=Luocj-888
 systemProp.https.proxyHost=192.168.67.10
 systemProp.http.proxyHost=192.168.67.10
 systemProp.https.proxyPort=3128
