--- a/D12-OpenGL2Basic/src/main/AndroidManifest.xml
+++ b/D12-OpenGL2Basic/src/main/AndroidManifest.xml
@@ -4,15 +4,18 @@
 
     <application
         android:allowBackup="true"
+        android:hasCode="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="android.app.NativeActivity">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="native_gl2_basic" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
