--- a/AV12_SoundRecorder/build.gradle
+++ b/AV12_SoundRecorder/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.luocj.demos.resourceloader"
+        applicationId "com.luocj.demos.soundrecorder"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
@@ -26,8 +26,9 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
